--- a/chi.html
+++ b/chi.html
@@ -1,3 +1,13 @@
-<h1>Chi Bếu</h1>
+<html>
+  <head></head>
+  <body style="
+    /* width: 480px; */
+    /* margin:  auto; */
+    /* align-content: center; */
+    text-align: center;
+  ">
+    <h1>Chi Bếu</h1>
 
-<h1>Ken cũng bếu</h1>
+    <h1>Ken cũng bếu</h1>
+  </body>
+</html>
